--- a/webrtc.html
+++ b/webrtc.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <title>PeerJS Video Call</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
+  <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
   <style>
     body {
       margin: 0;
       background: #000;
       overflow: hidden;
+      font-family: Arial, sans-serif;
     }
 
     video {
@@ -18,7 +19,8 @@
 
     #remoteVideo {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -36,74 +38,121 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(255,255,255,0.3);
     }
+
+    #status {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      color: white;
+      z-index: 10;
+      background: rgba(0,0,0,0.5);
+      padding: 5px 10px;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
-
+  <div id="status">Connecting...</div>
   <video id="remoteVideo" autoplay playsinline></video>
   <video id="localVideo" autoplay muted playsinline></video>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const roomId = urlParams.get("room");
+    const roomId = urlParams.get('room') || 'demo'; // Default room if none provided
 
-    if (!roomId) {
-      alert("Missing room parameter in URL. Use ?room=123");
-      throw new Error("Room ID is required");
-    }
-
-    const remoteVideo = document.getElementById("remoteVideo");
-    const localVideo = document.getElementById("localVideo");
+    const remoteVideo = document.getElementById('remoteVideo');
+    const localVideo = document.getElementById('localVideo');
+    const statusDiv = document.getElementById('status');
 
     let localStream;
     let peer;
     let call;
+    let isInitiator = false;
 
     async function start() {
       try {
+        // Get user media
         localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
         localVideo.srcObject = localStream;
+        statusDiv.textContent = 'Waiting for peer...';
 
-        peer = new Peer();
+        // Initialize PeerJS with default server
+        peer = new Peer({
+          host: '/',
+          path: '/peerjs',
+          config: {
+            iceServers: [
+              { urls: 'stun:stun.l.google.com:19302' },
+              { urls: 'stun:stun1.l.google.com:19302' }
+            ]
+          }
+        });
 
         peer.on('open', id => {
-          console.log("Peer connected as:", id);
+          console.log('Peer ID:', id);
+          statusDiv.textContent = `Your ID: ${id}. Share link: ${window.location.href}`;
 
-          if (roomId === id) return; // prevent self-call
-
-          // Try to call the room
-          call = peer.call(roomId, localStream);
-          handleCall(call);
+          // If this peer's ID matches roomId, they are the initiator
+          isInitiator = id !== roomId;
+          if (isInitiator) {
+            console.log('Initiating call to', roomId);
+            // Delay call to ensure peer is ready
+            setTimeout(() => {
+              call = peer.call(roomId, localStream);
+              if (call) handleCall(call);
+              else console.error('Failed to initiate call');
+            }, 1000);
+          }
         });
 
         peer.on('call', incomingCall => {
-          console.log("Received call");
+          console.log('Received incoming call');
+          statusDiv.textContent = 'Connected';
           incomingCall.answer(localStream);
           handleCall(incomingCall);
         });
 
+        peer.on('error', err => {
+          console.error('Peer error:', err);
+          statusDiv.textContent = `Error: ${err.type}`;
+          alert(`PeerJS error: ${err.type}`);
+        });
+
       } catch (err) {
-        alert("Failed to access camera/mic:\n" + err.message);
-        console.error(err);
+        console.error('Media error:', err);
+        statusDiv.textContent = 'Media error';
+        alert(`Failed to access camera/mic: ${err.message}`);
       }
     }
 
     function handleCall(activeCall) {
       call = activeCall;
       call.on('stream', remoteStream => {
-        remoteVideo.srcObject = remoteStream;
-        console.log("Remote stream received");
-      });
-
-      call.on('error', err => {
-        console.error("Call error:", err);
+        if (!remoteVideo.srcObject) {
+          remoteVideo.srcObject = remoteStream;
+          statusDiv.textContent = 'Connected';
+          console.log('Remote stream received');
+        }
       });
 
       call.on('close', () => {
-        console.log("Call ended");
+        console.log('Call ended');
         remoteVideo.srcObject = null;
+        statusDiv.textContent = 'Call ended. Waiting for peer...';
+      });
+
+      call.on('error', err => {
+        console.error('Call error:', err);
+        statusDiv.textContent = 'Call error';
       });
     }
+
+    // Clean up on page unload
+    window.addEventListener('beforeunload', () => {
+      if (call) call.close();
+      if (peer) peer.destroy();
+      if (localStream) localStream.getTracks().forEach(track => track.stop());
+    });
 
     start();
   </script>
